--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,14 @@
-<div class="jumbotron">
+<div class="jumbotron center">
   <h1>Welcome to my app</h1>
   <p>
-    <%= link_to "Sign up now!", "#", class: "btn btn-success btn-lg"%> 
+    <% if user_signed_in? %>
+    <%= image_tag "http://i.imgur.com/BuODQwJ.png" %>
+    <p>"We are building something spectacular. Please stand by..."<br> - <i>Eugene the buffalo</i></p>
+    <% else %>
+    <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg"%>
+    <%= link_to "Log in", user_session_path, class: "btn btn-default btn-lg"%>
+    <% end %>
+
+
   </p>
 </div>
