--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,11 @@
 <div class="jumbotron center">
-  <h1>Welcome to my app</h1>
-  <p>
+
     <% if user_signed_in? %>
+    <h1>Diggitydaggnabbit</h1>
     <%= image_tag "http://i.imgur.com/BuODQwJ.png" %>
     <p>"We are building something spectacular. Please stand by..."<br> - <i>Eugene the buffalo</i></p>
     <% else %>
+    <h1>Welcome to Daggadoo!</h1>
     <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg"%>
     <%= link_to "Log in", user_session_path, class: "btn btn-default btn-lg"%>
     <% end %>
