--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,15 @@
 <div class="jumbotron center">
 
     <% if user_signed_in? %>
-    <h1>Diggitydaggnabbit</h1>
-    <%= image_tag "http://i.imgur.com/BuODQwJ.png" %>
-    <p>"We are building something spectacular. Please stand by..."<br> - <i>Eugene the buffalo</i></p>
+    <div class="media-element">
+      <iframe class="vine-embed" src="https://vine.co/v/Mi2EJg5iD0e/embed/simple" width="500" height="500" frameborder="0"></iframe>
+      <h1>Kind of creepy, eh?</h1>
+    </div>
     <% else %>
     <h1>Welcome to Daggadoo!</h1>
     <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg"%>
     <%= link_to "Log in", user_session_path, class: "btn btn-default btn-lg"%>
+    <h3>Register and/or log in to see our features</h3>
     <% end %>
 
 
