--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 <body>
   <%= render 'layouts/header' %>
 
-<div class="container">
-  
+<div class="container container_devise">
+
   <% flash.each do |name, msg| %>
      <%= content_tag(:div, msg, class: "alert alert-info") %>
   <% end %>
