--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,16 +2,14 @@
 
     <% if user_signed_in? %>
     <div class="media-element">
-      <iframe class="vine-embed" src="https://vine.co/v/Mi2EJg5iD0e/embed/simple" width="500" height="500" frameborder="0"></iframe>
-      <h1>Kind of creepy, eh?</h1>
+      <%= image_tag('http://33.media.tumblr.com/afdfb5a8306d8992725ea248769cf3dc/tumblr_n5ok0c2gYF1suwcgpo1_400.gif', class: 'cat-gif') %>
     </div>
+    <%= link_to "Proceed?", inside_path, class: "btn btn-success btn-lg btn-gif"%>
     <% else %>
-    <h1>Welcome to Daggadoo!</h1>
+    <h1>Welcome to SpacedOut</h1>
     <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg"%>
     <%= link_to "Log in", user_session_path, class: "btn btn-default btn-lg"%>
-    <h3>Register and/or log in to see our features</h3>
+    <h3>Log in to see what we're up to</h3><br/>
+    <%= image_tag('http://37.media.tumblr.com/a9bf31014b1f2c01955f23135f20b47a/tumblr_mox1whgWX01rw4k4fo1_500.gif', class: 'cat-gif2') %>
     <% end %>
-
-
-  </p>
 </div>
