--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,18 @@
-<div class="jumbotron center">
+
 
     <% if user_signed_in? %>
+    <div class="center_devise">
     <div class="media-element">
       <%= image_tag('http://33.media.tumblr.com/afdfb5a8306d8992725ea248769cf3dc/tumblr_n5ok0c2gYF1suwcgpo1_400.gif', class: 'cat-gif') %>
     </div>
     <%= link_to "Proceed?", inside_path, class: "btn btn-success btn-lg btn-gif"%>
     <% else %>
+    <div class="jumbotron center">
     <h1>Welcome to SpacedOut</h1>
     <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg"%>
     <%= link_to "Log in", user_session_path, class: "btn btn-default btn-lg"%>
-    <h3>Log in to see what we're up to</h3><br/>
+    <br/>
     <%= image_tag('http://37.media.tumblr.com/a9bf31014b1f2c01955f23135f20b47a/tumblr_mox1whgWX01rw4k4fo1_500.gif', class: 'cat-gif2') %>
+    <h3>Log in to see what we're up to</h3>
     <% end %>
 </div>
