--- a/app/views/pages/inside.html.erb
+++ b/app/views/pages/inside.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron center">
+<div class="center_devise">
     <% if user_signed_in? %>
     <div class="media-element">
       <%= image_tag('http://25.media.tumblr.com/tumblr_m867ehWgzK1r4xjo2o1_500.gif', class: 'cat-gif') %>
