--- a/app/views/pages/inside_2.html.erb
+++ b/app/views/pages/inside_2.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron center">
+<div class="center_devise">
     <% if user_signed_in? %>
     <div class="media-element">
       <%= image_tag('http://media.giphy.com/media/RrIdGcnknHD0c/giphy.gif', class: 'cat-gif') %>
