--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,9 @@
   <%= yield %>
 </div>
 
+<footer>
+  <p>Created by <%= link_to "C.Eyler", creator_path %> 2014 </p> 
+</footer>
+
 </body>
 </html>
