--- a/app/views/pages/cat_2.erb
+++ b/app/views/pages/cat_2.erb
@@ -3,6 +3,6 @@
     <div class="media-element">
       <%= image_tag('http://25.media.tumblr.com/tumblr_m867ehWgzK1r4xjo2o1_500.gif', class: 'cat-gif') %>
     </div>
-    <%= link_to "Next", page_3_path, class: "btn btn-success btn-lg btn-gif"%>
+    <%= link_to "Next", cat_3_path, class: "btn btn-success btn-lg btn-gif"%>
     <% end %>
 </div>
