--- a/app/views/pages/cat_4.erb
+++ b/app/views/pages/cat_4.erb
@@ -3,6 +3,6 @@
     <div class="media-element">
       <%= image_tag('http://media.giphy.com/media/RrIdGcnknHD0c/giphy.gif', class: 'cat-gif') %>
     </div>
-      <%= link_to "Next", root_path, class: "btn btn-success btn-lg btn-gif"%>
+      <%= link_to "Next", cat_5_path, class: "btn btn-success btn-lg btn-gif"%>
     <% end %>
 </div>
