--- a/app/views/pages/cat_3.erb
+++ b/app/views/pages/cat_3.erb
@@ -3,6 +3,6 @@
     <div class="media-element">
       <%= image_tag('http://www.scified.com/pics/75.gif', class: 'cat-gif') %>
     </div>
-    <%= link_to "Next", page_4_path, class: "btn btn-success btn-lg btn-gif"%>
+    <%= link_to "Next", cat_4_path, class: "btn btn-success btn-lg btn-gif"%>
     <% end %>
 </div>
