--- a/app/views/layouts/_default.html.erb
+++ b/app/views/layouts/_default.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron center">
 <h1>Welcome to SpacedOut</h1>
-<%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg"%>
+<%= link_to "Register", new_user_registration_path, class: "btn btn-success btn-lg"%>
 <%= link_to "Log in", user_session_path, class: "btn btn-default btn-lg"%>
 <br/>
 <%= image_tag('http://37.media.tumblr.com/a9bf31014b1f2c01955f23135f20b47a/tumblr_mox1whgWX01rw4k4fo1_500.gif', class: 'cat-gif2') %>
