Update registration, log-in and profile layouts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Daggadoo</title>
+  <title>SpacedOut</title>
   <%= stylesheet_link_tag    'application' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
@@ -21,7 +21,7 @@
 </div>
 
 <footer>
-  <p>Created by <%= link_to "C.Eyler", creator_path %> 2014 </p> 
+  <p>Created by <%= link_to "C.Eyler", creator_path %> 2014 </p>
 </footer>
 
 </body>
