--- a/app/views/layouts/_default.html.erb
+++ b/app/views/layouts/_default.html.erb
@@ -4,4 +4,4 @@
 <%= link_to "Log in", user_session_path, class: "btn btn-default btn-lg"%>
 <br/>
 <%= image_tag('http://37.media.tumblr.com/a9bf31014b1f2c01955f23135f20b47a/tumblr_mox1whgWX01rw4k4fo1_500.gif', class: 'cat-gif2') %>
-<h3>Log in to see what we're up to</h3>
+<h3>Sign up or log in for our feline-friendly content. It's all free.</h3>
