--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Listing pins</h1>
+<div class="pins">
+
+
+<h1>Pins</h1>
 
 <table>
   <thead>
@@ -23,3 +26,5 @@
 <br>
 
 <%= link_to 'New Pin', new_pin_path %>
+
+</div>
