--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New pin</h1>
+<div class="pins">
+  <h1>New pin</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', pins_path %>
+  <%= link_to 'Back', pins_path %>
+</div>
